<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:mask="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp" android:id="@+id/linearLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" android:layout_margin="5dp">
            <TextView
                    android:text="@string/ip_address"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:gravity="end"
                    android:layout_gravity="center_vertical" android:layout_marginHorizontal="15dp"
                    android:textSize="18sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_text_ip_address"
                    android:hint="@string/localhost_address_string"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="" android:text="@string/my_pc_ip"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                mask:layout_constraintEnd_toEndOf="parent" mask:layout_constraintStart_toStartOf="parent"
                mask:layout_constraintTop_toTopOf="parent" android:layout_margin="5dp">
            <TextView
                    android:text="@string/port"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:gravity="end"
                    android:layout_gravity="center_vertical" android:layout_marginHorizontal="15dp"
                    android:textSize="18sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_text_port"
                    android:hint="@string/sample_port" android:layout_gravity="center_vertical"
                    android:autofillHints="" android:text="@string/fixed_server_port"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="75dp" android:id="@+id/linearLayout2"
            android:paddingHorizontal="20dp" android:paddingVertical="10dp">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_text_query"
                android:hint="@string/query"
                android:importantForAutofill="no"/>
        <Button
                android:text="@string/blow_up_mind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/send"
                android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="20dp"
        >
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/text_response" android:background="#FFFFFF" android:inputType="textMultiLine"
                    android:clickable="false" android:focusable="auto" android:focusedByDefault="false"
                    android:importantForAutofill="no" android:hint="@string/server_response" android:textSize="18sp"
                    android:textColor="#000000" android:textColorHint="#494949"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>